fix null pointer on prior
Signed-off-by: Jiri Peinlich <jiri.peinlich@gmail.com>